# magic-translator

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
static/: index.html
